# FOmega

./: README.md
backend/: backend.cabal  hie.yaml
backend/FOmega/: BoolRewrite.hs  FSyn.hs  FtoCore.hs
backend/FOmega/Data/: FErr.hs  FSyn.hs
backend/app/: AnnDraw.hs  CoreDraw.hs  GhcDriver.hs  Main.hs
backend/app/Data/: Module.hs
backend/coreDraw/: AnnDraw.hs  CoreDraw.hs  GhcDriver.hs
backend/coreDraw/Data/: AnnCore.hs  Module.hs
backend/examples/: gadt.hs  simple.hs  walk.hs
backend/simpleCoreDoc/: Main.hs
frontend/: .gitignore  elm.json  frontend.cabal  hie.yaml  package.json  postcss.config.js  tailwind.config.js
frontend/gtkApp/: Lib.hs  Main.hs
frontend/public/: index.html
frontend/src/: Main.elm
