cabal-version:      2.4
name:               backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             samtoth
maintainer:         sam@toth.co.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


executable backend
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: GhcDriver
                  ,CoreDraw
                  ,AnnDraw
                  ,Data.Module
                  ,Data.AnnCore


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , ghc
                    , ghc-paths
                    , bytestring
                    , http-media
                    , directory
                    , servant
                    , servant-server
                    , string-conversions
                    , text
                    , transformers
                    , wai
                    , wai-cors
                    , wai-extra
                    , warp
                    , HaTeX
                    , fomega
                    , aeson
                    , mtl

    hs-source-dirs:   app
    default-language: Haskell2010

library fomega
    exposed-modules:  Data.FSyn
                    , FtoCore

    build-depends:    base
                    , text
                    , ghc
                    , time
                    , mtl
                    , containers

    hs-source-dirs:   FOmega
    default-language: Haskell2010
