cabal-version:      2.4
name:               backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             samtoth
maintainer:         sam@toth.co.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable gtkApp
    main-is:          Main.hs

    build-depends:    base
                    , gi-gtk < 4
                    , haskell-gi-base
                    , reflex-gi-gtk
                    , gi-gdkpixbuf >= 2.0.26

    hs-source-dirs:   gtkApp

    ghc-version: 8.10.*

-- executable simpleCoreDoc
--     main-is:          Main.hs

--     build-depends:    base
--                     , coreDraw
--                     , HaTeX
--                     , directory
    
--     hs-source-dirs:   simpleCoreDoc
--     default-language: Haskell2010

-- -- executable backend
-- --     main-is:          Main.hs

-- --     -- Modules included in this executable, other than Main.
-- --     other-modules: 


-- --     -- LANGUAGE extensions used by modules in this package.
-- --     -- other-extensions:
-- --     build-depends:    base >= 4.16
-- --                     , bytestring
-- --                     , http-media
-- --                     , servant
-- --                     , servant-server
-- --                     , string-conversions
-- --                     , text
-- --                     , wai
-- --                     , wai-cors
-- --                     , wai-extra
-- --                     , warp
-- --                     , aeson
-- --                     , coreDraw

-- --     hs-source-dirs:   app
-- --     default-language: Haskell2010

-- library coreDraw

--     exposed-modules: GhcDriver
--                     ,CoreDraw
--                     ,AnnDraw
--                     ,Data.Module
--                     ,Data.AnnCore


--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:
--     build-depends:    base
--                     , ghc
--                     , ghc-paths
--                     , bytestring
--                     , directory
--                     , string-conversions
--                     , text
--                     , transformers
--                     , HaTeX
--                     , fomega
--                     , mtl
--                     , aeson

--     hs-source-dirs:   coreDraw
--     default-language: Haskell2010

-- library fomega
--     exposed-modules:  Data.FSyn
--                     , FtoCore


--     build-depends:    base
--                     , text
--                     , ghc
--                     , time
--                     , mtl
--                     , containers
--                     , unordered-containers
--                     , singletons
--                     , singletons-base

--     ghc-options:     -Wall -fno-warn-unticked-promoted-constructors

--     default-extensions: ScopedTypeVariables, GADTs, DataKinds, TypeFamilies, TypeOperators

--     hs-source-dirs:   FOmega
--     default-language: Haskell2010
