cabal-version:      2.4
name:               frontend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sam Toth
maintainer:         sam@toth.co.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable frontend
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Lib

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:   reflex-gi-gtk == 0.2.0.0
                     , base ^>= 4.13 || ^>= 4.14
                     , containers ^>= 0.6.2
                     , dependent-sum ^>= 0.7.1
                     , gi-gtk ^>= 3.0
                     , gi-gdk
                     , haskell-gi-base ^>= 0.24.5 || ^>= 0.25
                     , mtl ^>= 2.2.2
                     , patch ^>= 0.0
                     , reflex ^>= 0.8
                     , text ^>= 1.2.4

                     
    ghc-options:         -threaded

    hs-source-dirs:   gtkApp
    default-language: Haskell2010
